update manage part

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="/static/css/AdminLTE.min.css"/>
   <!-- patches-->
   <link rel="stylesheet" href="/static/css/patches.css"/>
+  <link rel="stylesheet" href="/static/css/metroStyle/metroStyle.css"/>
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="/static/css/skins/_all-skins.min.css"/>
@@ -35,8 +36,6 @@
 </body>
 <!-- ./wrapper -->
 
-<!-- jQuery 2.2.0 -->
-<script src="/static/plugins/jQuery/jQuery-2.2.0.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
 <script src="/static/js/bootstrap.min.js"></script>
 <!-- FastClick -->
@@ -55,6 +54,8 @@
 <script src="/static/plugins/chartjs/Chart.min.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="/static/js/pages/dashboard2.js"></script>
+<script src="/static/js/jquery.ztree.core.min.js"></script>
+<script src="/static/js/jquery.ztree.exedit.min.js"></script>
 <script type="application/javascript" src="/static/plugins/iCheck/icheck.min.js"></script>
 <script>
   $(function () {
