add introduction setting and article edit and add

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="/static/dashboard/plugins/jvectormap/jquery-jvectormap-1.2.2.css"/>
   <!-- Theme style -->
   <link rel="stylesheet" href="/static/dashboard/css/AdminLTE.min.css"/>
+  <!-- H5 editor-->
+  <link rel="stylesheet" href="/static/dashboard/css/bootstrap3-wysihtml5.min.css"/>
   <!-- patches-->
   <link rel="stylesheet" href="/static/dashboard/css/patches.css"/>
   <link rel="stylesheet" href="/static/dashboard/css/metroStyle/metroStyle.css"/>
@@ -56,6 +58,7 @@
 <script src="/static/dashboard/js/pages/dashboard2.js"></script>
 <script src="/static/dashboard/js/jquery.ztree.core.min.js"></script>
 <script src="/static/dashboard/js/jquery.ztree.exedit.min.js"></script>
+<script src="/static/dashboard/js/bootstrap3-wysihtml5.all.min.js"></script>
 <script type="application/javascript" src="/static/dashboard/plugins/iCheck/icheck.min.js"></script>
 <script>
   $(function () {
